# observe

./: .gitignore  .gitmodules  CMakeLists.txt  Cmakepresets.json
assets/shaders/: fs_imgui.sc  fs_triangle.sc  fs_ui.sc  varying.def.sc  varying_ui.def.sc  vs_imgui.sc  vs_triangle.sc  vs_ui.sc
cmake/: ObserveCompiler.cmake  ObserveUtilities.cmake  ObserveWindows.cmake  Observeshaders.cmake
examples/canvas_demo/: CMakeLists.txt  canvas_demo_layer.cpp  canvas_demo_layer.h  main.cpp
examples/imgui_demo/: CMakeLists.txt  imgui_context.cpp  imgui_context.h  imgui_layer.cpp  imgui_layer.h  imgui_renderer.cpp  imgui_renderer.h  main.cpp
include/observe/: application.h  imgui_renderer.h  mesh.h  renderer.h  triangle.h
include/observe/app/: application.h  application_layer.h
include/observe/graphics/: camera.h  color.h  mesh.h  rect.h  renderer.h  shader.h  shader_loader.h  triangle.h  vertex_layout.h
include/observe/imgui/: imgui_context.h  imgui_renderer.h
include/observe/math/: mat4.h  transform.h  vec2.h  vec3.h  vec4.h
include/observe/ui/: canvas.h
include/observe/windowing/: window.h
port/: .gitignore  CMakeLists.txt
port/apps/observe_noFFT/: CMakeLists.txt
port/apps/observe_noFFT/app/: CMakeLists.txt  clap_entry_impl.cpp  clap_entry_impl.h  clap_plugin.cpp  clap_plugin.h  main.cpp  miniaudio_impl.c  plugin_entry.cpp  resonate_view.cpp  resonate_view.h  vst3_entry.cpp  vst3_plugin.cpp  vst3_plugin.h
port/apps/observe_noFFT/src/oscillators/: Oscillator.cpp  Oscillator.hpp  Phasor.cpp  Phasor.hpp  PhasorCpp.mm  PhasorCppProtected.h  Resonator.cpp  Resonator.hpp  ResonatorBank.cpp  ResonatorBank.hpp  ResonatorBankCpp.mm  ResonatorBankVec.cpp  ResonatorBankVec.hpp  ResonatorBankVecCpp.mm  ResonatorCpp.mm  TrackingResonator.cpp  TrackingResonator.hpp  TrackingResonatorBank.cpp  TrackingResonatorBank.hpp  TrackingResonatorBankCpp.mm  TrackingResonatorBankVec.cpp  TrackingResonatorBankVec.hpp  TrackingResonatorBankVecCpp.mm  TrackingResonatorCpp.mm
port/apps/observe_noFFT/src/oscillators/include/: PhasorCpp.h  ResonatorBankCpp.h  ResonatorBankVecCpp.h  ResonatorCpp.h  TrackingResonatorBankCpp.h  TrackingResonatorBankVecCpp.h  TrackingResonatorCpp.h
port/cmake/: compile_flags.cmake
port/examples/: CMakeLists.txt  main.cpp
port/examples/Basic/: basic.cpp
port/examples/BlendModes/: blend_modes.cpp
port/examples/Bloom/: bloom.cpp
port/examples/BringYourOwnWindow/: bring_your_own_window.cpp
port/examples/ClapPlugin/: clap_plugin.cpp  clap_plugin.h  plugin_entry.cpp
port/examples/Gradients/: gradients.cpp
port/examples/Layout/: layout.cpp
port/examples/LiveShaderEditing/: live_shader_editing.cpp
port/examples/MouseEvents/: mouse_events.cpp
port/examples/MultiWindow/: multi_window.cpp
port/examples/Paths/: paths.cpp
port/examples/PostEffects/: post_effects.cpp
port/examples/Showcase/: examples_frame.cpp  examples_frame.h  showcase.cpp  showcase.h
port/examples/Vst3Plugin/: plugin_entry.cpp  version.h  vst3_plugin.cpp  vst3_plugin.h
port/modules/: CMakeLists.txt
port/modules/observe_app/: CMakeLists.txt  application_editor.cpp  application_editor.h  application_window.cpp  application_window.h  client_window_decoration.cpp  client_window_decoration.h  window_event_handler.cpp  window_event_handler.h
port/modules/observe_file_embed/: CMakeLists.txt  create_embed_header.cmake  create_file_lookup.cmake  embed_file.cmake  embedded_file.h
port/modules/observe_graphics/: CMakeLists.txt  animation.h  canvas.cpp  canvas.h  color.cpp  color.h  embedded.cmake  emoji.h  font.cpp  font.h  gradient.cpp  gradient.h  graphics_caches.cpp  graphics_caches.h  graphics_utils.cpp  graphics_utils.h  image.cpp  image.h  layer.cpp  layer.h  palette.cpp  palette.h  path.cpp  path.h  post_effects.cpp  post_effects.h  region.cpp  region.h  renderer.cpp  renderer.h  screenshot.cpp  screenshot.h  shader.h  shape_batcher.cpp  shape_batcher.h  shapes.cpp  shapes.h  svg.cpp  svg.h  text.h  (+3 more)
port/modules/observe_graphics/linux/: emoji_linux.cpp
port/modules/observe_graphics/macos/: emoji_macos.cpp  windowless_context.mm
port/modules/observe_graphics/win32/: emoji_win32.cpp
port/modules/observe_ui/: CMakeLists.txt  events.cpp  events.h  frame.cpp  frame.h  layout.cpp  layout.h  popup_menu.cpp  popup_menu.h  scroll_bar.cpp  scroll_bar.h  svg_frame.cpp  svg_frame.h  undo_history.cpp  undo_history.h
port/modules/observe_ui/macos/: menu_bar.mm
port/modules/observe_ui/win32/: menu_bar.cpp  menu_bar.h
port/modules/observe_utils/: CMakeLists.txt  child_process.h  clone_ptr.h  defines.h  dimension.h  events.h  file_system.cpp  file_system.h  space.h  string_utils.cpp  string_utils.h  thread_utils.h  time_utils.cpp  time_utils.h
port/modules/observe_utils/posix/: child_process_posix.cpp  defines.cpp
port/modules/observe_utils/win32/: child_process_win32.cpp  defines.cpp
port/modules/observe_widgets/: CMakeLists.txt  bar_list.cpp  bar_list.h  button.cpp  button.h  color_picker.cpp  color_picker.h  graph_line.cpp  graph_line.h  heat_map.cpp  heat_map.h  palette_editor.cpp  palette_editor.h  shader_editor.cpp  shader_editor.h  shader_quad.cpp  shader_quad.h  text_editor.cpp  text_editor.h
port/modules/observe_windowing/: CMakeLists.txt  windowing.cpp  windowing.h
port/modules/observe_windowing/emscripten/: windowing_emscripten.cpp  windowing_emscripten.h
port/modules/observe_windowing/linux/: windowing_x11.cpp  windowing_x11.h
port/modules/observe_windowing/macos/: windowing_macos.h  windowing_macos.mm
port/modules/observe_windowing/win32/: windowing_win32.cpp  windowing_win32.h
src/: imgui_context.cpp
src/app/: application.cpp  main.cpp
src/graphics/: camera.cpp  color.cpp  mesh.cpp  rect.cpp  renderer.cpp  shader.cpp  shader_loader.cpp  triangle.cpp  vertex_layout.cpp
src/imgui/: imgui_context.cpp  imgui_renderer.cpp
src/math/: mat4.cpp  transform.cpp  vec2.cpp  vec3.cpp  vec4.cpp
src/ui/: canvas.cpp
src/video/: CMakeLists.txt  video.c
src/windowing/: window.cpp
